src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.navbar-mobile {
  display: none;
  justify-content: center;
}

.navbar-desktop {
  display: flex;
  justify-content: space-evenly;
}

.navbar-buttons {
  display: flex;
}

.navbar-button:first-child,
.border-left {
  border-left: 1px solid rgba(34,36,38,.1);
}

.navbar-button {
  width: 101px;
  justify-content: center;
}

.navbar-button,
.navbar-button-mobile {
  color: #4183c4 !important;
}

.signout-button {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.hide {
  display: none;
}

.logo {
  width: 163px !important;
  height: 34px !important;
  margin-right: 58px !important;
  top: 5px;
}

.anonymous {
  border: 1px solid rgba(0, 0, 0, .2);
  padding-top: 20px;
}

.calendar {
  margin: 0 auto;
}

.calendar-link {
  position: relative; 
  top: 14px;
}

.calendar-link:hover {
  text-decoration: underline;
}

.image-picker-container {
  display: block;
  text-align: center;
  margin-top: 12px;
}

.login-form-container,
.login-form,
.login-form.grid {
  height: 100vh;
}

.login-form {
  width: 80vw;
  margin: 0 auto;
}

.login-form-button,
.login-form-prompt,
.google-login-button span,
.user-profile-details,
.label {
  font-weight: 200 !important;
}

.google-login-button span {
  margin-right: 10px;
}

.google-login-icon {
  margin-right: 0px !important;
  position: relative;
  top: -2px;
}

.homepage-container {
  width: 100vw;
  height: 100vh;
  max-width: 370px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
}

.feed-menu-container,
.feed-menu,
.feed-newpost-textarea,
.postcard-container,
.searchcard-container {
  margin-bottom: 12px;
}

.feed-menu,
.user-profile-container {
  margin-top: 12px;
}

.feed-newpost-submit-button {
  margin-top: 6px !important;
  margin-bottom: 20px !important;
}

.postcard-container .postcard {
  width: 100% !important;
}

.postcard-anonymous {
  width: 35px !important;
  height: 35px !important;
  border-radius: 50%;;
  padding-top: 6px;
}

.comment-card-container {
  padding: 10px;
}

.comment-card {
  width: 100% !important;
}

.comment-card-reveal-link {
  display: block;
  text-align: right;
}

.comment-card-textarea-container textarea {
  margin-top: 8px !important;
}

.formatted-post {
  float: left;
  max-width: 100%;
  word-wrap: break-word;
}

.feed-menu-item {
  min-width: 82px;
  display: flex;
  justify-content: center;
}

/* Feed menu button selected */
.ui.menu .active.item {
  background: rgba(33, 132, 209, .05) !important;
}


/* USER PROFILE */
.user-profile {
  width: 500px !important;
  margin: 0 auto !important;
  padding: 20px !important;
}

.user-profile-image {
  display: block;
  margin: 0 auto;
  width: 80px;
  height: 80px;
  border-radius: 40px;
}

.user-profile-header,
.user-profile-icon {
  display: inline-block;
}

.user-profile-username,
.user-profile-edit-link,
.user-profile-save-button {
  display: block !important;
  text-align: center !important;
}

.user-profile-save-button {
  margin: 0 auto !important;
}

.label,
.user-profile-save-button {
  margin-top: 20px !important;
}

.label,
.edit-profile {
  text-align: left; 
}

.all-users-search-container {
  width: 290px;
  margin: 0 auto;
  margin-top: 12px;
}

.all-users-searchbar {
  width: 100%;
  margin-bottom: 12px;
}

.all-users-search-options {
  cursor: pointer;
  display: block;
  text-align: right;
}

.all-users-results {
  margin-top: 20px;
}

.advanced-search-container {
  margin-bottom: 70px;
  margin-top: 12px;
}

.searchcard-image {
  border: 1px solid rgba(0, 0, 0, .2);
  border-radius: 50%;
  width: 50px !important;
  height: 50px !important;
}

.searchcard-content-container,
.searchcard-content {
  position: relative;
  top: 5px;
}

.searchcard-anonymous {
  padding-top: 10px;
}

.cohort-search-container > div {
  display: inline-block;
}

.cohort-search-container > .cohort-id {
  float: right;
  width: 85px !important;
}

/*!
 * Load Awesome v1.1.0 (http://github.danielcardoso.net/load-awesome/)
 * Copyright 2015 Daniel Cardoso <@DanielCardoso>
 * Licensed under MIT
*/
.spinner-container {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.small-container {
  width: 100%;
  height: 100%;
  margin-bottom: 10px;
}
.la-ball-clip-rotate,
.la-ball-clip-rotate > div {
    position: relative;
    -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
            box-sizing: border-box;
}
.la-ball-clip-rotate {
    display: block;
    font-size: 0;
    color: #fff;
}
.la-dark {
    color: #4183c4;
}
.la-ball-clip-rotate > div {
    display: inline-block;
    float: none;
    background-color: currentColor;
    border: 0 solid currentColor;
}
.la-ball-clip-rotate {
    width: 32px;
    height: 32px;
}
.la-ball-clip-rotate > div {
    width: 32px;
    height: 32px;
    background: transparent;
    border-width: 2px;
    border-bottom-color: transparent;
    border-radius: 100%;
    -webkit-animation: ball-clip-rotate .75s linear infinite;
      -moz-animation: ball-clip-rotate .75s linear infinite;
        -o-animation: ball-clip-rotate .75s linear infinite;
            animation: ball-clip-rotate .75s linear infinite;
}
.la-ball-clip-rotate.la-sm {
    width: 16px;
    height: 16px;
}
.la-ball-clip-rotate.la-sm > div {
    width: 16px;
    height: 16px;
    border-width: 1px;
}
.la-ball-clip-rotate.la-2x {
    width: 64px;
    height: 64px;
}
.la-ball-clip-rotate.la-2x > div {
    width: 64px;
    height: 64px;
    border-width: 4px;
}
.la-ball-clip-rotate.la-3x {
    width: 96px;
    height: 96px;
}
.la-ball-clip-rotate.la-3x > div {
    width: 96px;
    height: 96px;
    border-width: 6px;
}
/*
* Animation
*/
@-webkit-keyframes ball-clip-rotate {
    0% {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg);
    }
    50% {
        -webkit-transform: rotate(180deg);
                transform: rotate(180deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
                transform: rotate(360deg);
    }
}
@-moz-keyframes ball-clip-rotate {
    0% {
        -moz-transform: rotate(0deg);
            transform: rotate(0deg);
    }
    50% {
        -moz-transform: rotate(180deg);
            transform: rotate(180deg);
    }
    100% {
        -moz-transform: rotate(360deg);
            transform: rotate(360deg);
    }
}
@-o-keyframes ball-clip-rotate {
    0% {
        -o-transform: rotate(0deg);
          transform: rotate(0deg);
    }
    50% {
        -o-transform: rotate(180deg);
          transform: rotate(180deg);
    }
    100% {
        -o-transform: rotate(360deg);
          transform: rotate(360deg);
    }
}
@keyframes ball-clip-rotate {
    0% {
        -webkit-transform: rotate(0deg);
          -moz-transform: rotate(0deg);
            -o-transform: rotate(0deg);
                transform: rotate(0deg);
    }
    50% {
        -webkit-transform: rotate(180deg);
          -moz-transform: rotate(180deg);
            -o-transform: rotate(180deg);
                transform: rotate(180deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
          -moz-transform: rotate(360deg);
            -o-transform: rotate(360deg);
                transform: rotate(360deg);
    }
}


@media (max-width: 767px) {
  .navbar-mobile {
    display: flex;
  }
  
  .navbar-desktop {
    display: none !important;
  }

  .feed-menu-container,
  .all-users-search-container,
  .user-profile-container {
    width: 90vw;
    margin: 0 auto;
    padding-bottom: 20px;
    margin-top: 12px;
  }

  .feed-menu {
    max-width: 338px;
    margin: 0 auto;
    margin-bottom: 12px;
  }

  .feed-menu-item {
    min-width: 0px;
    max-width: 73px;
  }

  .searchcard {
    width: 100% !important;
  }

  .logo {
    margin-left: 5px !important;
    /* margin-right: 30px !important; */
    margin-right: 11px !important;
  }

  .signout-button {
    /* width: 68px !important; */
    padding-left: 17px;
    padding-right: 13px;
  }
}

